AIR-6100 add error recovery sample